# Milionerzy_na_PP2

./: README.md  pytania_bhp.txt  sbruh.c
pp2/: CMakeLists.txt  button.c  button.h  kola_ratunkowe.c  kola_ratunkowe.h  main.c  main_menu.c  main_menu.h  omain.txt  other_functions.c  other_functions.h  question_loading.c  question_loading.h  temp.c  temp.h
pp2/assets/: leaderboard_klasyczny.txt  pytania_bhp.txt  pytania_granie.txt  top5_klasyczny.txt  top5_nieskonczony.txt
pytania/: leaderboard_klasyczny.txt  leaderboard_nieskonczony.txt  pytania_bhp.txt  pytania_fnaf.txt  pytania_jedzenie.txt  pytania_kielce.txt  pytania_psk.txt  top5_klasyczny.txt  top5_nieskonczony.txt
src/: CMakeLists.txt  file_related.c  file_related.h  kola_ratunkowe.c  kola_ratunkowe.h  main.c  other_functions.c  other_functions.h  plik.c  question_loading.c
